tests/invalid_loop/test_uv_udp.php
<?php
$class = 'UVUdp';
require __DIR__ . '/../../test-tools.php';
require __DIR__ . '/error_handler.php';
$udp = new UVUdp(new stdClass());
